<resources>
    <!--  App configuration  -->
    <string name="app_name">Motor Vitals</string>
    <string name="app_motorcycle_file">Motorcycle</string>
    <string name="app_user_file">User</string>
    <string name="app_motorcycle_backup_file">BackupMotorcycle</string>
    <string name="app_user_backup_file">BackupUser</string>

    <!--  Content description  -->
    <string name="button_description">Button_description</string>
    <string name="image_description">Image_description</string>

    <!--  Bottom navigation menu  -->
    <string name="Motorcycle">Motorcycle</string>
    <string name="Status">Status</string>
    <string name="Profile">Profile</string>

    <!--  Hint to input  -->
    <string name="detail_list">Your list name</string>

    <!--  Autofill hint  -->
    <string name="detail_title_fill">Generic model</string>
    <string name="detail_description_fill">Description</string>

    <!--  Motorcycle Detail Fragment  -->
    <string name="detail_title">Title</string>
    <string name="detail_description">Description</string>
    <string name="detail_km">Current Km</string>
    <string name="detail_add_list">Add new list</string>
    <string name="detail_add_element">Add</string>

    <!--  Element Fragment  -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="notification">Notification</string>
    <string name="days_interval">Days interval</string>
    <string name="last_date_maintenance">Last maintenance (date)</string>
    <string name="km_interval">Km interval</string>
    <string name="last_km_maintenance">Last maintenance (Km)</string>
    <string name="interval">&lt;</string>
    <string name="empty_interval">0</string>
    <string name="min">Min</string>
    <string name="mid">Mid</string>
    <string name="max">Max</string>
    <string name="today">Set as today</string>

    <!--  Status fragment  -->
    <string name="status_motorcycles">Motorcycles</string>
    <string name="status_detail">Detail</string>

    <!--  Profile fragment  -->
    <string name="profile_min_color">Minimum color</string>
    <string name="profile_med_color">Medium color</string>
    <string name="profile_max_color">Maximum color</string>
    <string name="profile_hint_min">Color format Es: #00FF00</string>
    <string name="profile_hint_med">Color format Es: #FFFF00</string>
    <string name="profile_hint_max">Color format Es: #FF0000</string>
    <string name="profile_backup">Backup</string>
    <string name="profile_load_backup">Load Backup</string>
    <string name="profile_user">Your nickname</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>