<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark_less_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/constraintLayout6">

                <TextView
                        android:id="@+id/status_elem_title"
                        android:text="@string/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        style="@style/StatusStyle"

                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/status_elem_card_margin_width"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/status_elem_card_margin_height"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/status_elem_card_margin_height"/>
                <Button
                        android:id="@+id/status_elem_button"
                        android:text="@string/status_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonStyle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginEnd="@dimen/status_elem_card_margin_width"
                        app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:baselineAligned="false">
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="@integer/material_motion_duration_long_1">

                        <TextView
                                android:id="@+id/status_elem_day"
                                android:text="@string/days_interval"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewStyle"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/status_elem_day_image"
                                app:layout_constraintBottom_toBottomOf="parent"/>
                        <ImageView
                                android:id="@+id/status_elem_day_image"
                                android:src="@drawable/baseline_circle_24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="@dimen/status_elem_card_margin_width"
                                app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="@dimen/status_elem_card_margin_height"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginBottom="@dimen/status_elem_card_margin_height"
                                android:contentDescription="@string/image_description"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="@integer/material_motion_duration_long_1">

                        <TextView
                                android:id="@+id/status_elem_km"
                                android:text="@string/km_interval"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextViewStyle"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/status_elem_km_image"
                                app:layout_constraintBottom_toBottomOf="parent"/>
                        <ImageView
                                android:id="@+id/status_elem_km_image"
                                android:src="@drawable/baseline_circle_24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginStart="@dimen/status_elem_card_margin_width"
                                app:layout_constraintTop_toTopOf="parent"
                                android:layout_marginTop="@dimen/status_elem_card_margin_height"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginBottom="@dimen/status_elem_card_margin_height"
                                android:contentDescription="@string/image_description"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>