<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/dark_background"
                                                   tools:context=".fragments.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_bottom_style"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout24">

        <ImageView
                android:id="@+id/profile_edit"
                android:src="@drawable/baseline_edit_24"
                app:tint="@color/dark_text"
                android:layout_width="@dimen/fragment_image_dimension"
                android:layout_height="@dimen/fragment_image_dimension"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/image_description"
                android:layout_marginBottom="@dimen/fragment_height"
                android:layout_marginTop="@dimen/fragment_height"
                android:layout_marginEnd="@dimen/fragment_margin"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:id="@+id/profile_save"
                android:src="@drawable/baseline_check_24"
                app:tint="@color/dark_text"
                android:layout_width="@dimen/fragment_image_dimension"
                android:layout_height="@dimen/fragment_image_dimension"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/image_description"
                android:layout_marginBottom="@dimen/fragment_height"
                android:layout_marginTop="@dimen/fragment_height"
                android:layout_marginEnd="@dimen/fragment_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout14" app:layout_constraintTop_toBottomOf="@+id/constraintLayout24">

        <ImageView
                android:id="@+id/profile_image"
                android:contentDescription="@string/image_description"
                android:src="@drawable/baseline_fact_check_24"
                android:tint="@color/dark_text"
                android:layout_width="@dimen/motorcycle_image"
                android:layout_height="@dimen/motorcycle_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout25">

        <EditText
                android:id="@+id/profile_user_name"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                style="@style/TextViewStyle"
                android:textSize="@dimen/profile_user_name_text"
                android:hint="@string/profile_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/profile_user_name_margin_bottom"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout25" android:id="@+id/constraintLayout21">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout15"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/textView8"
                        android:text="@string/profile_min_color"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/element_image"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout20">

                <EditText
                        android:id="@+id/profile_color_min"
                        style="@style/TextViewStyle"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:autofillHints=""
                        android:hint="@string/profile_hint_min"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/card_corner"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/card_corner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout20">
                <ImageView
                        android:id="@+id/profile_circle_color_min"
                        android:src="@drawable/baseline_circle_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/state_min"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/image_description"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/card_title_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout8">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout18"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/textView10"
                        android:text="@string/profile_med_color"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/element_image"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout19">

                <EditText
                        android:id="@+id/profile_color_med"
                        style="@style/TextViewStyle"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:autofillHints=""
                        android:hint="@string/profile_hint_med"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/card_corner"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/card_corner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout19">
                <ImageView
                        android:id="@+id/profile_circle_color_med"
                        android:src="@drawable/baseline_circle_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/state_med"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/image_description"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/card_title_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout17">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/constraintLayout23"
                    app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                        android:id="@+id/textView11"
                        android:text="@string/profile_max_color"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/element_image"
                    app:layout_constraintEnd_toStartOf="@+id/constraintLayout16">

                <EditText
                        android:id="@+id/profile_color_max"
                        style="@style/TextViewStyle"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:autofillHints=""
                        android:hint="@string/profile_hint_max"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="@dimen/card_corner"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="@dimen/card_corner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/constraintLayout16">
                <ImageView
                        android:id="@+id/profile_circle_color_max"
                        android:src="@drawable/baseline_circle_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="@color/state_max"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/image_description"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/card_title_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout21">

        <Button
                android:id="@+id/profile_backup_button"
                style="@style/ButtonStyle"
                android:text="@string/profile_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/element_interval_width"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>